2010-01-31  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/export.c:
   Close meta tag for export date properly.


2010-01-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gb.c:
   Replace the old icons with smiley icons from the Rodent icon theme.
   Fix showing the same icon for two or more slots.
   Minor cleanups.


2010-01-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/plugins.dox:
   Add gcc commands to build a plugin to the HowTo.


2009-12-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.restructuredtext:
   Add the default comment character sequence for reStructuredText.
 * src/callbacks.c:
   Show the Find/Goto dialogs if the corresponding toolbar buttons are
   clicked but their text fields are not part of the toolbar (#2920807).


2009-12-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Fix LaTeX environment auto completion with CR/LF line endings.
   Add some sanity checks.
 * src/callbacks.c, src/prefs.c, src/toolbar.c, src/toolbar.h:
   Set the correct parent window for the toolbar editor
   dialog (closes #2913334).


2009-12-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/editor.c:
   Extend auto_latex() function to check whether an environment has been
   closed within the next lines to avoid auto adding double \end{}.


2009-11-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * data/latex.tags:
   Add a couple of further latex-beamer commands to list of LaTeX tags.


2009-11-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/include/tm_tagmanager.h:
   Update partly outdated and wrong doc comment.


2009-11-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/about.c, THANKS:
   Add Peter Scholtens and Ayke van Laethem to list of translators. Move
   Kurt de Bree into section of previous translators.


2009-11-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/php.c: