@@ -275,4 +275,6 @@ void editor_apply_update_prefs(GeanyEditor *editor);
 
 gchar *editor_get_calltip_text(GeanyEditor *editor, const TMTag *tag);
 
+void editor_toggle_fold(GeanyEditor *editor, gint line, gint modifiers);
+
 #endif
