@@ -2236,7 +2236,7 @@ static void cb_func_document_action(guint key_id)
 			if (editor_prefs.folding)
 			{
 				gint line = sci_get_current_line(doc->editor->sci);
-				sci_toggle_fold(doc->editor->sci, line);
+				editor_toggle_fold(doc->editor, line, 0);
 				break;
 			}
 	}
